# dani-optics-dot

./: README.md  dani-optics-dot.cabal  optimetrista.cabal
.github/workflows/: haskell-ci.yml
lib/Optics/: Dot.hs
lib/Optics/Lens/: Dot.hs
test/: Main.hs
