cabal-version:      3.4
name:               optics-dot
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall


common deps
    build-depends:    
        base >=4.19.0.0, 
        optics-core >= 0.4.1.1 && < 0.5

library
    import:           warnings, deps
    exposed-modules:  Optics.Dot
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite optimetrista-test
    import:           warnings, deps
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        optics-dot,
